--- a/app/src/main/res/layout/fragment_add_city.xml
+++ b/app/src/main/res/layout/fragment_add_city.xml
@@ -56,11 +56,8 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextCityTextInputLayout">
+            app:layout_constraintTop_toBottomOf="@+id/editTextCityTextInputLayout" />
 
-            <!-- Chips can be declared here, or added dynamically. -->
-
-        </com.google.android.material.chip.ChipGroup>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
